# JIVE

./: CMakeLists.txt
jive_components/containers/: jive_Component.h
jive_layouts/: jive_layouts.cpp  jive_layouts.h
jive_layouts/layout/: jive_Interpreter.cpp
jive_layouts/layout/gui-items/widgets/: jive_Component.cpp  jive_Component.h
runners/demo-runner/: CMakeLists.txt
runners/demo-runner/source/jive_demo/: Application.h
runners/demo-runner/source/jive_demo/gui/: WindowPresenter.h  style.json  window.xml
runners/demo-runner/source/jive_demo/gui/aliases/: Aliases.h
runners/demo-runner/source/jive_demo/gui/aliases/page-link/: page_link.json  page_link.xml
runners/demo-runner/source/jive_demo/gui/aliases/subtitle/: subtitle.json  subtitle.xml
runners/demo-runner/source/jive_demo/gui/aliases/title/: title.json  title.xml
runners/demo-runner/source/jive_demo/gui/pages/: HomePagePresenter.h  home_page.xml
